@@ -15,7 +15,6 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Objects;
-import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -32,7 +31,7 @@ public class LagerService {
 
     public List<Hefe> getHefe() {
         return StreamSupport.stream(hefeRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Float getWertHefe() {
@@ -42,7 +41,7 @@ public class LagerService {
 
     public List<Hopfen> getHopfen() {
         return StreamSupport.stream(hopfenRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Float getWertHopfen() {
@@ -52,7 +51,7 @@ public class LagerService {
 
     public List<Malz> getMalz() {
         return StreamSupport.stream(malzRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Float getWertMalz() {
@@ -62,12 +61,12 @@ public class LagerService {
 
     public List<WeitereZutaten> getWeitereZutaten() {
         return StreamSupport.stream(weitereZutatenRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Float getWertWeitereZutaten() throws IllegalArgumentException {
         List<WeitereZutaten> retrievedItems = StreamSupport.stream(weitereZutatenRepository.findAll().spliterator(), false)
-                .collect(Collectors.toList());
+                .toList();
         if (retrievedItems.isEmpty()) {
             return 0.0f;
         }
